<resources>
    <string name="app_name">Financial Management</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_large">REGISTER</string>
    <string name="signup">Sign up</string>
    <string name="login_large">LOGIN</string>
    <string name="login"> Login</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="surplus">Surplus</string>

    <!-- TODO: menu -->
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="statistical">Statistical</string>
    <string name="history">History</string>
    <string name="category">Category</string>
    <string name="schedule">Schedule</string>
    <string name="logout">Logout</string>
    <string name="home_title">HOME</string>
    <string name="setting_title">SETTING</string>
    <string name="statistical_title">STATISTICAL</string>
    <string name="history_title">HISTORY</string>
    <string name="category_title">CATEGORY</string>
    <string name="schedule_title">SCHEDULE</string>
    <string name="logout_title">LOGOUT</string>
    <string name="add_transaction_title">ADD TRANSACTION</string>
    <string name="date_rang_picker_title">DATE RANG PICKER</string>

    <!-- TODO: Home -->
    <string name="your_status">Your Status</string>
    <string name="excellent">Excellent</string>
    <string name="expenses_during_month">Expenses during the month</string>
    <string name="your_asset">Your Asset</string>
    <string name="transactions_this_month">Transactions this month</string>


    <!-- TODO: add transaction -->
    <string name="time">Time</string>
    <string name="target">Target</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="revenues">Revenues</string>
    <string name="expenses">Expenses</string>
    <string name="empty">No description yet</string>
    <string name="select_option">Select Option</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_weekday">Select Weekday</string>
    <string name="select_month">Select Month</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>


    <!-- TODO: setting -->
    <string name="account_and_security">Account and Security</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="limit_title">Monthly Spending Alert</string>
    <string name="limit_hint">Enter the amount</string>
    <string name="limit_null">Not yet</string>


    <!-- TODO: category -->
    <string name="title">Title</string>
    <string name="icon">Icon</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_confirmation_1">All transactions under the category </string>
    <string name="delete_category_confirmation_2">will be deleted. Are you sure you want to delete this category?</string>
    <string name="delete">Delete</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="view_details">View Details</string>
    <string name="edit">Edit</string>

    <!-- TODO: option -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="until_changed">Until Changed</string>
    <string name="please_select_all_fields">Please select all fields</string>
    <string name="select_day_of_months">Select day of months</string>
    <string name="select_month_of_years">Select month of years</string>
    <string name="select_weekday_of_weeks">Select weekday of weeks</string>
</resources>