<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/revenues"
            />
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/spending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expenses"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:hint="@string/title" />

<!--    <EditText-->
<!--        android:id="@+id/editTextColor"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="Color" />-->

    <EditText
        android:id="@+id/editTextIcon"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:hint="@string/icon" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:hint="@string/description" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_gravity="center"
        android:background="@drawable/bg_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
