<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:background="@color/primary_10">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/income"
                    android:text="@string/revenues"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:padding="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/primary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/primary_10">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spending"
                    android:text="@string/expenses"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:padding="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:background="@color/parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_primary_10"
                    android:padding="10dp"
                    android:textSize="17dp"
                    android:ems="10"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_primary_10"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="17dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/target"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:padding="10dp"/>

                    <EditText
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_primary_10"
                        android:gravity="center_vertical"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textSize="17dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:padding="10dp"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_primary_10"
                    android:minHeight="140dp"
                    android:padding="10dp"
                    android:hint="@string/empty"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/primary"
                android:gravity="center"
                android:layout_marginVertical="12dp"
                android:padding="6dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:cornerRadius="10dp" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>